--- a/lingoappTcc/app/src/main/res/layout/activity_criar_atividade.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_criar_atividade.xml
@@ -9,16 +9,24 @@
 
     <FrameLayout
         android:id="@+id/frame_barra_superior"
-        android:layout_width="411dp"
-        android:layout_height="93dp"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
         android:background="@drawable/barra_superior_voltar"
+        android:theme="@style/barraSuperiorVoltar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-    </FrameLayout>
+        <ImageButton
+            android:id="@id/btn_voltar"
+            android:layout_width="50dp"
+            android:layout_height="80dp"
+            android:theme="@style/botaoVoltar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
+    </FrameLayout>
 
     <androidx.constraintlayout.widget.Group
         android:id="@id/group_barra_superior"
@@ -27,16 +35,13 @@
         app:constraint_referenced_ids="frame_barra_superior" />
 
     <TextView
-        android:id="@+id/text_criar_ativ"
+        android:id="@+id/text_criar_atividade"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="28dp"
-        android:fontFamily="@font/josefin_sans_semibold"
-        android:text="CRIAR ATIVIDADE"
-        android:textAlignment="center"
-        android:textColor="@color/branco_claro"
-        android:textSize="26sp"
+        android:layout_marginTop="24dp"
+        android:text="@string/title_criar_atividade"
+        android:theme="@style/tituloDaPagina"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,155 +51,65 @@
         android:id="@+id/text_preencher_dados_atividade"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="12dp"
-        android:fontFamily="@font/lalezar"
-        android:text="Agora preencha com os dados da atividade:"
+        android:text="@string/msg_instrucao_criar_atividade"
         android:textAlignment="textStart"
-        android:textColor="@color/roxo"
-        android:textSize="20sp"
+        android:theme="@style/textoRoxoLalezar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/frame_barra_superior" />
 
+    <EditText
+        android:id="@+id/plain_text_titulo_input"
+        android:layout_width="340dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/fundo_botao"
+        android:hint="   titulo da atividade"
+        android:inputType="text"
+        android:theme="@style/campoDeTexto"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_preencher_dados_atividade" />
+
     <Button
         android:id="@+id/btn_cancelar"
         android:layout_width="120dp"
         android:layout_height="60dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="206dp"
-        android:backgroundTint="@color/laranja1"
-        android:fontFamily="@font/lalezar"
-        android:text="Cancelar"
-        android:textAllCaps="false"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.138"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="20dp"
+        android:text="@string/action_cancelar"
+        android:textColor="@color/branco_claro"
+        android:theme="@style/botaoLaranja"
+        app:layout_constraintEnd_toStartOf="@+id/btn_enviar"
+        app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/plain_text_respo2_input" />
-
-    <EditText
-        android:id="@+id/plain_text_titulo_input"
-        android:layout_width="310dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="12dp"
-        android:background="@android:drawable/title_bar"
-        android:backgroundTint="@color/branco_escuro"
-        android:ems="10"
-        android:fontFamily="@font/arimo"
-        android:hint="titulo da atividade"
-        android:inputType="text"
-        android:textAlignment="textStart"
-        android:textColor="@color/cinza_escuro"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_preencher_dados_atividade" />
-
-    <EditText
-        android:id="@+id/plain_text_questao_input"
-        android:layout_width="310dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="12dp"
-        android:background="@android:drawable/title_bar"
-        android:backgroundTint="@color/branco_escuro"
-        android:ems="10"
-        android:fontFamily="@font/arimo"
-        android:hint="questão1"
-        android:inputType="text"
-        android:textAlignment="textStart"
-        android:textColor="@color/cinza_escuro"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/plain_text_titulo_input" />
-
-    <EditText
-        android:id="@+id/plain_text_questao1_input"
-        android:layout_width="310dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="12dp"
-        android:background="@android:drawable/title_bar"
-        android:backgroundTint="@color/branco_escuro"
-        android:ems="10"
-        android:fontFamily="@font/arimo"
-        android:hint="questão2"
-        android:inputType="text"
-        android:textAlignment="textStart"
-        android:textColor="@color/cinza_escuro"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/plain_text_questao_input" />
-
-    <EditText
-        android:id="@+id/plain_text_respo_input"
-        android:layout_width="310dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="12dp"
-        android:background="@android:drawable/title_bar"
-        android:backgroundTint="@color/branco_escuro"
-        android:ems="10"
-        android:fontFamily="@font/arimo"
-        android:hint="resposta questão1"
-        android:inputType="text"
-        android:textAlignment="textStart"
-        android:textColor="@color/cinza_escuro"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/plain_text_questao_input" />
-
-    <EditText
-        android:id="@+id/plain_text_respo2_input"
-        android:layout_width="310dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="12dp"
-        android:background="@android:drawable/title_bar"
-        android:backgroundTint="@color/branco_escuro"
-        android:ems="10"
-        android:fontFamily="@font/arimo"
-        android:hint="resposta questão2"
-        android:inputType="text"
-        android:textAlignment="textStart"
-        android:textColor="@color/cinza_escuro"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/plain_text_respo_input" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_adicionar_questao" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btn_enviar"
         android:layout_width="120dp"
-        android:layout_height="64dp"
-        android:layout_marginStart="73dp"
-        android:layout_marginTop="22dp"
-        android:layout_marginEnd="51dp"
-        android:layout_marginBottom="206dp"
-        android:backgroundTint="@color/roxo"
-        android:fontFamily="@font/lalezar"
-        android:text="Enviar"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:iconTint="@color/branco_claro"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="60dp"
+        android:text="@string/action_enviar"
+        android:textColor="@color/branco_claro"
+        android:theme="@style/botaoRoxo"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_cancelar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btn_cancelar"
-        app:layout_constraintTop_toBottomOf="@+id/plain_text_respo2_input" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/btn_cancelar" />
+
+    <Button
+        android:id="@+id/btn_adicionar_questao"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="Adicionar questão"
+        android:theme="@style/botaoRoxo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/plain_text_titulo_input" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
