--- a/lingoappTcc/app/src/main/res/layout/activity_alterardados_estudante.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_alterardados_estudante.xml
@@ -11,7 +11,7 @@
         android:id="@+id/frame_barra_superior"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:background="@drawable/barra_superior_voltar"
+        android:theme="@style/barraSuperiorVoltar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,15 +21,9 @@
         android:id="@id/btn_voltar"
         android:layout_width="50dp"
         android:layout_height="80dp"
-        android:background="@android:color/transparent"
-        android:rotation="270"
-        android:rotationX="0"
-        android:rotationY="0"
-        android:scaleType="fitCenter"
-        android:src="@drawable/ic_round_expand_less_24"
+        android:theme="@style/botaoVoltar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/branco_claro" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/text_alterar_dados_estudante"
@@ -37,11 +31,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="24dp"
-        android:fontFamily="@font/josefin_sans_semibold"
-        android:text="ALTERAR DADOS"
-        android:textAlignment="center"
-        android:textColor="@color/branco_claro"
-        android:textSize="26sp"
+        android:text="@string/title_alterar_dados"
+        android:theme="@style/tituloDaPagina"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,11 +51,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="50dp"
-        android:layout_marginEnd="50dp"
-        android:fontFamily="@font/lalezar"
-        android:text="Nome:"
-        android:textColor="@color/roxo"
-        android:textSize="19sp"
+        android:text="@string/msg_digitar_nome"
+        android:theme="@style/textoRoxoLalezar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,23 +61,16 @@
     <EditText
         android:id="@+id/plain_text_nome_input"
         android:layout_width="310dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="12dp"
+        android:layout_height="50dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="12dp"
         android:background="@drawable/fundo_botao"
-        android:backgroundTint="@color/branco_escuro"
-        android:ems="10"
-        android:fontFamily="@font/arimo"
         android:hint="  nome"
         android:inputType="textPersonName"
-        android:textAlignment="textStart"
-        android:textColor="@color/cinza_escuro"
+        android:theme="@style/campoDeTexto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_nome_estudante" />
-
 
     <TextView
         android:id="@+id/text_sobrenome_estudante"
@@ -97,11 +78,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="50dp"
-        android:fontFamily="@font/lalezar"
-        android:text="Sobrenome:"
-        android:textColor="@color/roxo"
-        android:textSize="19sp"
+        android:text="@string/msg_digitar_sobrenome"
+        android:theme="@style/textoRoxoLalezar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -110,18 +88,12 @@
     <EditText
         android:id="@+id/plain_text_sobrenome_input"
         android:layout_width="310dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="12dp"
+        android:layout_height="50dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="12dp"
         android:background="@drawable/fundo_botao"
-        android:backgroundTint="@color/branco_escuro"
-        android:ems="10"
-        android:fontFamily="@font/arimo"
         android:hint="  sobrenome"
         android:inputType="textPersonName"
-        android:textAlignment="textStart"
-        android:textColor="@color/cinza_escuro"
+        android:theme="@style/campoDeTexto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -133,11 +105,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="50dp"
-        android:fontFamily="@font/lalezar"
-        android:text="E-mail:"
-        android:textColor="@color/roxo"
-        android:textSize="19sp"
+        android:text="@string/msg_digitar_email"
+        android:theme="@style/textoRoxoLalezar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -146,18 +115,12 @@
     <EditText
         android:id="@+id/plain_text_email_input"
         android:layout_width="310dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="12dp"
+        android:layout_height="50dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="12dp"
         android:background="@drawable/fundo_botao"
-        android:backgroundTint="@color/branco_escuro"
-        android:ems="10"
-        android:fontFamily="@font/arimo"
         android:hint="  e-mail"
         android:inputType="textEmailAddress"
-        android:textAlignment="textStart"
-        android:textColor="@color/cinza_escuro"
+        android:theme="@style/campoDeTexto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -169,11 +132,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="50dp"
-        android:fontFamily="@font/lalezar"
-        android:text="Senha:"
-        android:textColor="@color/roxo"
-        android:textSize="19sp"
+        android:text="@string/msg_digitar_senha"
+        android:theme="@style/textoRoxoLalezar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -182,18 +142,12 @@
     <EditText
         android:id="@+id/plain_text_senha_input"
         android:layout_width="310dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="12dp"
+        android:layout_height="50dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="12dp"
         android:background="@drawable/fundo_botao"
-        android:backgroundTint="@color/branco_escuro"
-        android:ems="10"
-        android:fontFamily="@font/arimo"
         android:hint="  senha"
         android:inputType="textPassword"
-        android:textAlignment="textStart"
-        android:textColor="@color/cinza_escuro"
+        android:theme="@style/campoDeTexto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -203,15 +157,13 @@
         android:id="@+id/btn_cancelar"
         android:layout_width="120dp"
         android:layout_height="60dp"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
-        android:backgroundTint="@color/laranja1"
-        android:fontFamily="@font/lalezar"
-        android:text="Cancelar"
-        android:textAllCaps="false"
-        android:textSize="20sp"
+        android:text="@string/action_cancelar"
+        android:textColor="@color/branco_claro"
+        android:theme="@style/botaoLaranja"
         app:layout_constraintEnd_toStartOf="@+id/btn_salvar"
+        app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/plain_text_senha_input" />
 
@@ -219,30 +171,23 @@
         android:id="@+id/btn_salvar"
         android:layout_width="120dp"
         android:layout_height="60dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="12dp"
-        android:backgroundTint="@color/roxo"
-        android:fontFamily="@font/lalezar"
-        android:text="Salvar"
+        android:text="@string/action_salvar"
         android:textColor="@color/branco_claro"
-        android:textSize="20sp"
+        android:theme="@style/botaoRoxo"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_cancelar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/btn_cancelar"
-        app:layout_constraintTop_toBottomOf="@+id/plain_text_senha_input" />
+        app:layout_constraintStart_toEndOf="@+id/btn_cancelar" />
 
     <TextView
         android:id="@+id/text_excluir_conta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="12dp"
-        android:fontFamily="@font/arimo"
-        android:text="Excluir Conta"
-        android:textColor="@color/laranja1"
-        android:textSize="22sp"
-        android:textStyle="bold"
+        android:text="@string/action_excluir_conta"
+        android:textAllCaps="false"
+        android:textSize="30sp"
+        android:theme="@style/textoLaranjaCAPS"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
