--- a/lingoappTcc/app/src/main/res/layout/activity_vizu_tarefa_prof.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_vizu_tarefa_prof.xml
@@ -45,7 +45,7 @@
         android:layout_marginTop="44dp"
         android:layout_marginEnd="50dp"
         android:fontFamily="@font/arimo"
-        android:text="Friends"
+        android:text="1. Enunciado da"
         android:textAlignment="textStart"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/roxo"
