--- a/lingoappTcc/app/src/main/res/layout/lista_item_professor.xml
+++ b/lingoappTcc/app/src/main/res/layout/lista_item_professor.xml
@@ -30,19 +30,15 @@
 
                 <TextView
                     android:id="@+id/text_nome_professor"
+                    android:theme="@style/textoPretoArimo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="7dp"
-                    android:text="Daniel Bussolaro"
-                    android:textSize="15sp">
-
+                    android:layout_marginTop="6dp"
+                    android:text="@string/msg_nome_professor">
                 </TextView>
             </LinearLayout>
 
         </LinearLayout>
-
-
-
 
     </RelativeLayout>
 
