--- a/lingoappTcc/app/src/main/res/layout/activity_pagina_inicial.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_pagina_inicial.xml
@@ -46,6 +46,7 @@
         android:layout_height="65dp"
         android:layout_marginTop="48dp"
         android:text="@string/action_entrar_estudante"
+        android:textColor="@color/roxo"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -59,6 +60,7 @@
         android:layout_height="65dp"
         android:layout_marginTop="8dp"
         android:text="@string/action_entrar_professor"
+        android:textColor="@color/roxo"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
