--- a/lingoappTcc/app/src/main/res/layout/activity_gerenciar_turma.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_gerenciar_turma.xml
@@ -9,9 +9,9 @@
 
     <FrameLayout
         android:id="@+id/frame_barra_superior"
+        android:theme="@style/barraSuperiorVoltar"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:background="@drawable/barra_superior_voltar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,29 +19,20 @@
 
     <ImageButton
         android:id="@id/btn_voltar"
+        android:theme="@style/botaoVoltar"
         android:layout_width="50dp"
         android:layout_height="80dp"
-        android:background="@android:color/transparent"
-        android:rotation="270"
-        android:rotationX="0"
-        android:rotationY="0"
-        android:scaleType="fitCenter"
-        android:src="@drawable/ic_round_expand_less_24"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/branco_claro" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/text_gerenciar_turma"
+        android:theme="@style/tituloDaPagina"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="24dp"
-        android:fontFamily="@font/josefin_sans_semibold"
-        android:text="GERENCIAR TURMA"
-        android:textAlignment="center"
-        android:textColor="@color/branco_claro"
-        android:textSize="26sp"
+        android:text="@string/title_gerenciar_turma"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,79 +47,54 @@
 
     <Button
         android:id="@+id/btn_convidar_estudante"
+        android:theme="@style/botaoRoxo"
         android:layout_width="310dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="12dp"
+        android:layout_height="65dp"
         android:layout_marginTop="120dp"
-        android:layout_marginEnd="12dp"
-        android:backgroundTint="@color/roxo"
-        android:fontFamily="@font/lalezar"
-        android:text="Convidar Estudante"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="@color/branco_claro"
+        android:text="@string/action_convidar_estudante"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/frame_barra_superior" />
 
     <Button
         android:id="@+id/btn_editar_turma"
+        android:theme="@style/botaoRoxo"
         android:layout_width="310dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="12dp"
+        android:layout_height="65dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="12dp"
-        android:backgroundTint="@color/roxo"
-        android:fontFamily="@font/lalezar"
-        android:text="Editar Turma"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="@color/branco_claro"
+        android:text="@string/action_editar_turma"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_convidar_estudante" />
 
     <Button
         android:id="@+id/btn_retirar_estudante"
+        android:theme="@style/botaoRoxo"
         android:layout_width="310dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="12dp"
+        android:layout_height="65dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="12dp"
-        android:backgroundTint="@color/roxo"
-        android:fontFamily="@font/lalezar"
-        android:text="Retirar Estudante"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="@color/branco_claro"
+        android:text="@string/action_retirar_estudante"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_editar_turma" />
 
     <Button
         android:id="@+id/btn_excluir_turma"
+        android:theme="@style/botaoLaranja"
         android:layout_width="310dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="12dp"
+        android:layout_height="65dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="12dp"
-        android:backgroundTint="@color/laranja1"
-        android:fontFamily="@font/lalezar"
-        android:text="Excluir Turma"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="@color/branco_claro"
+        android:text="@string/action_excluir_turma"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_retirar_estudante" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
