--- a/lingoappTcc/app/src/main/res/layout/activity_pagina_cadastro.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_pagina_cadastro.xml
@@ -53,6 +53,7 @@
         android:layout_height="65dp"
         android:layout_marginTop="8dp"
         android:text="@string/action_sou_estudante"
+        android:textColor="@color/roxo"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
@@ -66,6 +67,7 @@
         android:layout_height="65dp"
         android:layout_marginTop="8dp"
         android:text="@string/action_sou_professor"
+        android:textColor="@color/roxo"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
