--- a/lingoappTcc/app/src/main/res/values/themes.xml
+++ b/lingoappTcc/app/src/main/res/values/themes.xml
@@ -61,6 +61,14 @@
         <item name="android:textSize">26sp</item>
     </style>
 
+    <style name="tituloDoPopup">
+        <item name="android:textColor">@color/roxo</item>
+        <item name="android:fontFamily">@font/josefin_sans_bold</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">26sp</item>
+    </style>
+
     <style name="tituloLogo">
         <item name="android:textColor">@color/branco_claro</item>
         <item name="android:text">@string/title_nome_lingoapp</item>
@@ -134,6 +142,15 @@
         <item name="android:scaleX">2</item>
         <item name="android:scaleY">2</item>
         <item name="android:contentDescription">@string/desc_botao_voltar</item>
+    </style>
+
+    <style name="botaoFechar">
+        <item name="android:src">@drawable/ic_round_close_24</item>
+        <item name="android:backgroundTint">@android:color/transparent</item>
+        <item name="android:scaleType">fitXY</item>
+        <item name="android:scaleX">2</item>
+        <item name="android:scaleY">2</item>
+        <item name="android:contentDescription">@string/desc_botao_fechar</item>
     </style>
 
     <style name="barraSuperiorVoltar">
